[tool.poetry]
name = "quantex"
version = "0.1.0"
description = "Powerful trading bot, based on ChatGPT sentiment analysis of news headlines."
authors = ["Joachim Hodana <stylek777@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
undetected-chromedriver = "^3.4.5"
fastapi = "^0.100.0"
pyyaml = "^6.0"
sqlalchemy = "^2.0.18"
yarl = "^1.9.2"
uvicorn = "^0.22.0"
httpx = "^0.24.1"
alembic = "^1.11.1"
pydantic-settings = "^2.0.1"
asyncpg = "^0.28.0"
psycopg2-binary = "^2.9.6"
selenium = "^4.10.0"
python-dotenv = "^1.0.0"
pydantic = "^2.0.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.4.1"
black = "^23.7.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
